# golubator-back

./: .dockerignore  .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  README.md  docker-compose.yml  pyproject.toml  requirements.txt
hooks/: pre-commit.sh
src/: _dev.py  chats_views.py  config.py  database.py  login_views.py  main.py  run.py  schemes.py  utils.py
src/api/: messages.py  routers.py  users.py
src/db/: database.py
src/schemas/: emojis.py  jwt.py  messages.py
src/services/: emojis.py  messages.py
